--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,16 @@ button:hover:after {
   color: #fff;
   opacity: 0;
 }
+
+.v-center {
+  min-height: 100%; /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+
+  display: flex;
+  align-items: center;
+}
+
+.exp-img,
 .react-img,
 .node-img,
 .ds-img {
@@ -142,28 +152,34 @@ button:hover:after {
 .icon:hover {
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
+  transform: rotate(30deg);
 }
 
 .mongo-img {
   object-fit: contain;
   width: 100%;
-  height: 11.25em;
+  height: 10em;
 }
 
 .react-img {
-  height: 11.25em;
-  transform: rotate(270deg);
+  height: 10em;
+  transform: rotate(90deg);
 }
 .node-img {
   height: auto;
 }
 
+.exp-img,
 .ds-img {
-  height: 11.25em;
+  height: 10em;
+}
+
+.exp-img {
+  object-fit: contain;
 }
 
 .skills-card {
-  width: 11.25em;
+  width: 10em;
   text-align: center;
 }
 
@@ -191,11 +207,11 @@ button:hover:after {
   white-space: nowrap;
 }
 
-#home {
+.home {
   text-align: center;
-  padding-top: 5%;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
     0px 18px 23px rgba(0, 0, 0, 0.1);
+  margin-top: 10%;
 }
 
 hr {
@@ -204,11 +220,19 @@ hr {
 }
 
 .profile {
-  height: 250px;
-  width: 250px;
+  height: 13em;
+  width: 13em;
   margin: 4px 0 0 4px;
   box-shadow: 0 0 0 4px #61dbfb;
   border-radius: 50%;
+}
+
+.hidden {
+  border: none;
+}
+
+.extra {
+  border: none;
 }
 
 .jumbotron {
@@ -217,6 +241,7 @@ hr {
 }
 
 .jumbotron h1,
+h2,
 p {
   color: white;
 }
